--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -108,8 +108,9 @@
                                 <div class="timeline-item">
                                     <span class="time"><i class="fa fa-clock-o"></i>02 January</span>
 
-                                    <h3 class="timeline-header no-border"><a href="#">Venenatis blandit.</a> Duis auctor
-                                        hendrerit metus</h3>
+                                    <h3 class="timeline-header no-border">
+                                    	<a href="#">Ordina.</a> Thanks for using this template. #welcome
+                                    </h3>
                                 </div>
                             </li>
                             <li>
