--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -166,11 +166,15 @@
 
   override def receive = {
     case tweet: Tweet => onNext(tweet)
+      //We do not send tweets if a client is not reading from the stream fast enough.
+      if (isActive && totalDemand > 0)
+        onNext(tweet)
   }
 
 }</code></pre>
 
     <p>
+        <b>note:</b> You should not call onNext if the stream is closed or there is no demand.<br>
         Next: <a href="#tutorial/5" class="shortcut">Running the Flow</a>
     </p>
 </div>
