Made a comment more clear

--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -174,7 +174,7 @@
 }</code></pre>
 
     <p>
-        <b>note:</b> You should not call onNext if the stream is closed or there is no demand.<br>
+        <b>note:</b> You should not call onNext if the stream is not active or there is no demand.<br>
         Next: <a href="#tutorial/5" class="shortcut">Running the Flow</a>
     </p>
 </div>
