4 Updated the tutorial to match the new code

--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -192,7 +192,7 @@
     Now we've got our hands on a proper <code>Source</code> we can use it to construct a <code>Flow</code>:
 
         <pre><code>def tweetFlow(tweetFilter: TweetFilter): Flow[Message, Message, Unit] =
-            Flow.wrap(Sink.ignore, tweetSource filter tweetFilter map toMessage)(Keep.none)</code></pre>
+            Flow.fromSinkAndSource(Sink.ignore, tweetSource filter tweetFilter map toMessage)</code></pre>
 
     Note: ignore the tweetFilter for now, this is just a convenience parameter to be able to construct specific streams,
     like the stream of tweets for a specific user, or the stream of tweets that contain a specific hash tag.
@@ -223,7 +223,7 @@
         while on the other hand the outgoing channel will be serviced by our transformed actor that is listening to the
         event bus:
 
-    <pre><code>Flow.wrap(Sink.ignore, tweetSource filter tweetFilter map toMessage)(Keep.none)</code></pre>
+    <pre><code>Flow.fromSinkAndSource(Sink.ignore, tweetSource filter tweetFilter map toMessage)</code></pre>
     </p>
     <p>
         Next: <a href="#tutorial/6" class="shortcut">The Websocket</a>
@@ -331,8 +331,8 @@
     <p>Let's take a look at the failing test in  <a
             href="#code/src/test/scala/reactive/MainRoutingSpec.scala" class="shortcut">MainRoutingSpec.scala</a> first.</p>
 <pre><code>it should "handle websocket requests for hash tags" in {
-  Get("/ws/tweets/hashtag/test") ~> Upgrade(List(UpgradeProtocol("websocket"))) ~> emulateHttpCore ~> Main.mainFlow ~> check {
-    status shouldEqual SwitchingProtocols
+  WS("http://localhost/ws/tweets/hashtag/test", wsClient.flow) ~> Main.mainFlow ~> check {
+    isWebSocketUpgrade shouldEqual true
   }
 }
 </code></pre>
